compiler/testData/diagnostics/tests/duplicateJvmSignature/specialNames/classObjectCopiedField.kt
class C {
    default object {
        val X = 1
        <!CONFLICTING_JVM_DECLARATIONS!>val `X$1`<!> = 1
    }

    <!CONFLICTING_JVM_DECLARATIONS!>val X<!> = 1
}